Updated Footer Links

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://instagram.com/pratiksinghsim">Instagram</a>
+    <a class="footer-link" href="https://w3-omkumar.github.io/pratik-kumar-portfolio/">Website</a>
     <p class="copyright">© 2022 Pratik Kumar.</p>
   </div>
 
